--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     }
   ],
   "require": {
-    "php": "^7.1.3",
-    "guzzlehttp/guzzle": "6.3.*",
+    "php": ">=7.2",
+    "guzzlehttp/guzzle": "^6",
     "laravel/framework": "^6",
     "nathanmac/parser": "4.*",
     "orchestra/testbench": "3.7"
