--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
     "php": ">=7.2",
     "guzzlehttp/guzzle": "^6",
-    "laravel/framework": "^6",
+    "laravel/framework": "6.*",
     "nathanmac/parser": "4.*",
     "orchestra/testbench": "3.7"
   },
@@ -44,7 +44,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.1-dev"
+      "dev-master": "master"
     },
     "laravel": {
       "aliases": {
