--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "guzzlehttp/guzzle": "^6",
     "laravel/framework": "6.*",
     "nathanmac/parser": "4.*",
-    "orchestra/testbench": "3.7"
+    "orchestra/testbench": "4.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
@@ -44,7 +44,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "master"
+      "dev-master": "1.2.3"
     },
     "laravel": {
       "aliases": {
