--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
   "require": {
     "php": ">=7.2.5",
     "guzzlehttp/guzzle": "^6",
-    "laravel/framework": "7.*",
+    "laravel/framework": "^7",
     "nathanmac/parser": "4.*",
     "orchestra/testbench": "4.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~8.0",
+    "phpunit/phpunit": "^8.5",
     "mockery/mockery": "1.1.*"
   },
   "autoload": {
