--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
   ],
   "require": {
     "php": ">=7.2.5",
-    "guzzlehttp/guzzle": "^6",
+    "guzzlehttp/guzzle": "^6.3",
     "laravel/framework": "7.*",
     "nathanmac/parser": "4.*",
     "orchestra/testbench": "4.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
-    "mockery/mockery": "1.1.*"
+    "mockery/mockery": "^1.3.1"
   },
   "autoload": {
     "files": [
