--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     "php": ">=7.2.5",
     "guzzlehttp/guzzle": "^6.3",
     "laravel/framework": "7.*",
-    "nathanmac/parser": "4.*",
-    "orchestra/testbench": "4.*"
+    "nathanmac/parser": "dev-master",
+    "orchestra/testbench": "5.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
