--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "php": ">=7.2.5",
     "guzzlehttp/guzzle": "^6.3",
     "laravel/framework": "7.*",
+    "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
     "nathanmac/parser": "dev-master",
     "orchestra/testbench": "5.*"
   },
