--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,16 @@
     }
   ],
   "require": {
-    "php": ">=7.2",
-    "guzzlehttp/guzzle": "^6",
-    "laravel/framework": "6.*",
-    "nathanmac/parser": "4.*",
-    "orchestra/testbench": "4.*"
+    "php": "^8",
+    "ext-simplexml": "*",
+    "ext-xmlwriter": "*",
+    "guzzlehttp/guzzle": "6.*",
+    "laravel/framework": ">5.6 | 6.* | 7.* | 8.* | 9.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~8.0",
-    "mockery/mockery": "1.1.*"
+    "orchestra/testbench": "*",
+    "phpunit/phpunit": "*",
+    "mockery/mockery": "^1.4"
   },
   "autoload": {
     "files": [
@@ -40,9 +41,12 @@
     }
   },
   "suggest": {
-    "illuminate/validation": "^6"
+    "illuminate/validation": "5.7.*"
   },
   "extra": {
+    "branch-alias": {
+      "dev-master": "master"
+    },
     "laravel": {
       "aliases": {
       },
